[gd_scene load_steps=6 format=3 uid="uid://dwch46ervxqrt"]

[ext_resource type="Script" path="res://Menu/menu.gd" id="1_niej7"]
[ext_resource type="VideoStream" path="res://assets/menu/menu.ogv" id="2_juhyh"]
[ext_resource type="Texture2D" uid="uid://beyvauj6pavp" path="res://assets/menu/button.png" id="3_fdlhe"]
[ext_resource type="FontFile" uid="uid://d2cpiolm88uie" path="res://assets/fonts/Magic Bubble.ttf" id="4_jd67s"]
[ext_resource type="LabelSettings" uid="uid://crhvi6kq4effe" path="res://assets/fonts/label_font.tres" id="5_g1hr1"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_niej7")

[node name="MenuVideo" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1088.0
scale = Vector2(0.6, 0.6)
stream = ExtResource("2_juhyh")
autoplay = true
loop = true

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -176.0
offset_top = -203.0
offset_right = 32.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 0
icon = ExtResource("3_fdlhe")
flat = true
icon_alignment = 1
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Play"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = -11.5
offset_right = 20.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_jd67s")
theme_override_font_sizes/font_size = 50
text = "Jugar"
label_settings = ExtResource("5_g1hr1")

[node name="Instructions" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 37.0
offset_top = -203.0
offset_right = 245.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 0
icon = ExtResource("3_fdlhe")
flat = true
icon_alignment = 1
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Instructions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = -11.5
offset_right = 20.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_jd67s")
theme_override_font_sizes/font_size = 50
text = "Instrucciones"
label_settings = ExtResource("5_g1hr1")

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Instructions" to="." method="_on_instructions_pressed"]
